[package]
name = "jordquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"

# Enable a small amount of optimization in debug mode (from Bevy Docs)
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code: (from Bevy Docs)
[profile.dev.package."*"]
opt-level = 3
