[package]
name = "jordquest"
version = "0.1.0"
edition = "2021"

# Dynamic linking is enabled for fast compiling but MUST be removed before release!!!
[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
serde = "1.0.188"
csv = "1.2"
rand_chacha "0.3"

# Enable a small amount of optimization in debug mode (from Bevy Docs)
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code: (from Bevy Docs)
[profile.dev.package."*"]
opt-level = 3

# if we wanted extra performance, we would need a nightly compiler and to install LLD
# If you are using rust stable, remove the "-Zshare-generics=y" below.

#[target.x86_64-unknown-linux-gnu]
#linker = "clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must install [Mach-O LLD Port](https://lld.llvm.org/MachO/index.html) on mac. you can easily do this by installing llvm which includes lld with the "brew" package manager:
# `brew install llvm`
#[target.x86_64-apple-darwin]
#rustflags = [
#    "-C",
#    "link-arg=-fuse-ld=/usr/local/opt/llvm/bin/ld64.lld",
#    "-Zshare-generics=y",
#]

#[target.aarch64-apple-darwin]
#rustflags = [
#    "-C",
#    "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld",
#    "-Zshare-generics=y",
#]

#[target.x86_64-pc-windows-msvc]
#linker = "rust-lld.exe"
#rustflags = ["-Zshare-generics=n"]

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1