[package]
name = "jordquest"
version = "0.1.0"
edition = "2021"

# Dynamic linking is enabled for fast compiling but MUST be removed before release!!!
[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
csv = "1.2"
rand_chacha = "0.3"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode (from Bevy Docs)
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code: (from Bevy Docs)
[profile.dev.package."*"]
opt-level = 3